--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "export": "cross-env EXPORT=true next build && next-sitemap --config next-sitemap.config.js",
     "bundle-report": "cross-env ANALYZE=true next build",
     "build-all-in-dev": "cross-env VERCEL_ENV=production next build",
-    "version": "echo $npm_package_version"
+    "version": "echo $npm_package_version",
+    "upload": "node scripts/upload-to-notion.js",
+    "dev:upload": "nodemon --watch content/posts --ext md --exec 'npm run upload'"
   },
   "dependencies": {
     "@clerk/localizations": "^3.0.4",
