--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,20 @@
-# 环境变量 @see https://www.nextjs.cn/docs/basic-features/environment-variables
+# 环境变量配置说明
+# 1. 复制此文件并重命名为 .env.local
+# 2. 取消下面变量的注释并填写您的配置
+# 3. 不要将 .env.local 提交到版本控制
 
-# 可在此添加环境变量，去掉最左边的（# ）注释即可
-# Notion页面ID,必须
-# NOTION_PAGE_ID=097e5f674880459d8e1b4407758dc4fb
+# ====== Notion 配置 ======
+# Notion 集成令牌 (必需)
+# 获取地址: https://www.notion.so/my-integrations
+NOTION_TOKEN=your_integration_token_here
+
+# Notion 数据库ID (必需)
+# 从数据库页面URL中获取: https://www.notion.so/your-workspace/xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+DATABASE_ID=your_database_id_here
+
+# Notion 页面ID (必需)
+# 从页面URL中获取: https://www.notion.so/your-workspace/xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+NOTION_PAGE_ID=your_page_id_here
 
 # 非必须
 # NEXT_PUBLIC_VERSION=
