--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "build-all-in-dev": "cross-env VERCEL_ENV=production next build",
     "version": "echo $npm_package_version",
     "upload": "node scripts/upload-to-notion.js",
-    "dev:upload": "nodemon --watch content/posts --ext md --exec 'npm run upload'"
+    "dev:upload": "nodemon --watch content/posts --ext md --exec 'npm run upload'",
+    "watch": "node scripts/watch-posts.js",
+    "import:articles": "node scripts/import-articles.js"
   },
   "dependencies": {
     "@clerk/localizations": "^3.0.4",
