--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "@clerk/nextjs": "^5.1.5",
     "@headlessui/react": "^1.7.15",
     "@next/bundle-analyzer": "^12.1.1",
+    "@notionhq/client": "^4.0.1",
     "@vercel/analytics": "^1.0.0",
     "algoliasearch": "^4.18.0",
     "axios": "^1.7.2",
     "feed": "^4.2.2",
+    "gray-matter": "^4.0.3",
     "ioredis": "^5.4.2",
     "js-md5": "^0.7.3",
     "lodash.throttle": "^4.1.1",
