--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@vercel/analytics": "^1.0.0",
     "algoliasearch": "^4.18.0",
     "axios": "^1.7.2",
+    "dotenv": "^17.2.1",
     "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
     "ioredis": "^5.4.2",
