--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@headlessui/react": "^1.7.15",
     "@next/bundle-analyzer": "^12.1.1",
     "@notionhq/client": "^4.0.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@vercel/analytics": "^1.0.0",
     "algoliasearch": "^4.18.0",
     "axios": "^1.7.2",
@@ -54,7 +55,8 @@
     "react-hotkeys-hook": "^4.5.0",
     "react-notion-x": "7.3.0",
     "react-share": "^5.2.2",
-    "react-tweet-embed": "~2.0.0"
+    "react-tweet-embed": "~2.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "22.15.3",
