--- a/package.json
+++ b/package.json
@@ -41,10 +41,11 @@
     "axios": "^1.7.2",
     "dotenv": "^17.2.1",
     "feed": "^4.2.2",
-    "gray-matter": "^4.0.3",
     "ioredis": "^5.4.2",
     "js-md5": "^0.7.3",
+    "jsdom": "^26.1.0",
     "lodash.throttle": "^4.1.1",
+    "marked": "^16.1.2",
     "memory-cache": "^0.2.0",
     "next": "14.2.4",
     "notion-client": "7.3.0",
@@ -53,7 +54,7 @@
     "react-dom": "^18.2.0",
     "react-facebook": "^8.1.4",
     "react-hotkeys-hook": "^4.5.0",
-    "react-notion-x": "7.3.0",
+    "react-notion-x": "^7.4.3",
     "react-share": "^5.2.2",
     "react-tweet-embed": "~2.0.0",
     "uuid": "^11.1.0"
@@ -74,6 +75,8 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "gray-matter": "^4.0.3",
+    "inquirer": "^12.9.1",
     "next-sitemap": "^1.6.203",
     "postcss": "^8.4.31",
     "prettier": "^3.3.2",
